# config_management

./: .ansible-lint  .doco-cd.yml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sops.yaml  .yamllint  CHANGELOG.md  CLAUDE.md  README.md  ansible.cfg  cliff.toml  inventory.yml  local.yml  pyproject.toml  renovate.json  requirements.yml  run.yml
.claude/: settings.json
.github/workflows/: auto-tag.yml  ci.yml  configure-home-server.yml  deploy.yml  quality-check.yml  release.yml  restore-home-server.yml  update-home-server.yml
backup/: .env.template  README.md  profiles.yaml
bootstrap/gitops/: docker-compose.yaml
docs/: README.md  getting-started.md
docs/adr/: 0001-gitops-via-dococd.md  0002-docker-compose-over-k8s.md  0003-single-host-no-ha.md  0004-ansible-bootstrap-only.md  0005-sops-age-stack-secrets.md  0006-ansible-vault-bootstrap-secrets.md  0007-cloudflare-tunnel-external-exposure.md  0008-uv-replaces-poetry.md  0009-molecule-for-role-testing.md  0010-precommit-hooks-as-lint-gate.md  0011-category-action-commit-format.md  0012-absolute-bind-mounts-services-data.md  0013-external-home-server-network.md  0014-traefik-v3-replaces-nginx-proxy-manager.md  README.md  (+4 more)
inventory/: hosts.yml.template
playbooks/: home_server.yml  laptop.yml  restore_home_server.yml  update_home_server.yml
scripts/: dockcheck.sh  get-tailscale-api-token  new_server.md  new_server.sh  sync_env_to_vault.py  sync_vault_to_env.py
services/: .env.template  ai.yml  cloud_management.yml  databases.yml  dockcheck.sh  docker-compose.yml  financial_organizer.yml  home_assistant.yml  media.yml  money_metrics.yml  monitoring.yml  personal.yml  photos.yml  remote_access.yml  tools.yml
tests/: main.tf  network.tf  terraform.tf  test-setup.md  test_development.yml  test_gui.yml  test_projects.yml  test_restore.yml  test_services.yml  test_system.yml  variables.tf
(+122 files in other folders)
