[project]
name = "gitops-homelab"
version = "0.1.0"
description = "Personal homelab deployed GitOps-style on Ubuntu: Ansible host bootstrap, Docker Compose stacks reconciled by DocoCD, Restic backups."
authors = [
    { name = "Diego Heer", email = "diegojonathanheer@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ansible>=13.0.0,<14.0.0",
    "passlib>=1.7.4,<2.0.0",
]

[dependency-groups]
dev = [
    "ansible-lint>=25.1.1",
    "yamllint>=1.35.1",
    "molecule>=25.2.0",
    "molecule-plugins[docker]>=23.7.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 120
